# spotify-osc

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  test.yml
src/: main.rs
src/config/: config.rs
src/entities/: config.rs  spotify.rs
src/event_loops/: http.rs  mod.rs  osc.rs
src/http/: mod.rs  spotify.rs
src/managers/: spotify.rs
src/routes/: mod.rs  spotify.rs
src/utils/: http.rs  mod.rs  osc.rs  time.rs
