[package]
name = "spotify-osc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.9.1"
tokio = { version = "1.21.2", features=["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
actix-web = "4"
confy = "0.5.1"
base64 = "0.13.1"
log = "0.4"
simple_logger = { version = "4.0.0", features = ["colors", "colored"] }
