[package]
name = "spotify-osc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.10.1"
tokio = { version = "1.21.2", features=["full"] }
serde = {version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
tiny_http = "0.12.0"
confy = "0.5.1"
base64 = "0.21.5"
log = "0.4"
simple_logger = { version = "4.0.0", features = ["colors", "colored"] }
tray-item = "0.9.0"
notify-rust = "4.9.0"
rspotify = "0.12.0"
ascii = "1.1.0"
open = "5.0.0"

[build-dependencies]
embed-resource = "2.4.0"